--- a/.env
+++ b/.env
@@ -1,14 +1,24 @@
+########################################
+# 🌱 Variables d’environnement n8n
+# Généré automatiquement par bootstrap.sh
+########################################
+
+# ——— Database ———
 DB_TYPE=postgresdb
 DB_POSTGRESDB_HOST=n8n-db
-DB_POSTGRESDB_USER=n8n
-DB_POSTGRESDB_PASSWORD=motdepassecomplexe
-POSTGRES_USER=n8n
-POSTGRES_PASSWORD=motdepassecomplexe
-POSTGRES_DB=n8n
-N8N_HOST=n8ncl.jeremiealcaraz.com  # Remplace par ton sous-domaine Cloudflare
-N8N_PORT=5678
-N8N_PROTOCOL=https
-NODE_ENV=production
-WEBHOOK_URL=https://n8ncl.jeremiealcaraz.com # Remplace par ton sous-domaine
-GENERIC_TIMEZONE=Europe/Paris
-TUNNEL_TOKEN=XXX # Remplace par ton token cloudflare 
+DB_POSTGRESDB_USER=test          # 👤 Utilisateur Postgres
+DB_POSTGRESDB_PASSWORD=test  # 🔑 Mot de passe Postgres
+POSTGRES_USER=test               # 👤 Utilisateur Postgres (service DB)
+POSTGRES_PASSWORD=test       # 🔑 Mot de passe Postgres (service DB)
+POSTGRES_DB=test                 # 🗄️  Nom de la base
+
+# ——— n8n server ———
+N8N_HOST=eeazeza                # 🌍 Nom de domaine public
+N8N_PORT=5678                        # 🚪 Port interne n8n (défaut)
+N8N_PROTOCOL=https                   # 🔒 Protocole
+NODE_ENV=production                  # ⚙️  Mode prod
+WEBHOOK_URL=https://eeazeza     # 🔗 URL webhook
+GENERIC_TIMEZONE=Europe/Paris        # 🕑 Fuseau horaire
+
+# ——— Cloudflared ———
+TUNNEL_TOKEN=zaeazeazeazee           # 🔐 Token du tunnel Cloudflare
