custom-image-n8n-firecrawl: feature n8n + firecrawl (squash de tous les commits)

--- a/.env.example
+++ b/.env.example
@@ -6,19 +6,22 @@
 # ——— Database ———
 DB_TYPE=postgresdb
 DB_POSTGRESDB_HOST=n8n-db
-DB_POSTGRESDB_USER=test          # 👤 Utilisateur Postgres
-DB_POSTGRESDB_PASSWORD=test  # 🔑 Mot de passe Postgres
-POSTGRES_USER=test               # 👤 Utilisateur Postgres (service DB)
-POSTGRES_PASSWORD=test       # 🔑 Mot de passe Postgres (service DB)
-POSTGRES_DB=test                 # 🗄️  Nom de la base
+DB_POSTGRESDB_USER=test     # 👤 Utilisateur Postgres
+DB_POSTGRESDB_PASSWORD=test # 🔑 Mot de passe Postgres
+POSTGRES_USER=test          # 👤 Utilisateur Postgres (service DB)
+POSTGRES_PASSWORD=test      # 🔑 Mot de passe Postgres (service DB)
+POSTGRES_DB=test            # 🗄️  Nom de la base
 
 # ——— n8n server ———
-N8N_HOST=eeazeza                # 🌍 Nom de domaine public
-N8N_PORT=5678                        # 🚪 Port interne n8n (défaut)
-N8N_PROTOCOL=https                   # 🔒 Protocole
-NODE_ENV=production                  # ⚙️  Mode prod
-WEBHOOK_URL=https://eeazeza     # 🔗 URL webhook
-GENERIC_TIMEZONE=Europe/Paris        # 🕑 Fuseau horaire
+N8N_HOST=eeazeza              # 🌍 Nom de domaine public
+N8N_PORT=5678                 # 🚪 Port interne n8n (défaut)
+N8N_PROTOCOL=https            # 🔒 Protocole
+NODE_ENV=production           # ⚙️  Mode prod
+WEBHOOK_URL=https://eeazeza   # 🔗 URL webhook
+GENERIC_TIMEZONE=Europe/Paris # 🕑 Fuseau horaire
 
 # ——— Cloudflared ———
-TUNNEL_TOKEN=zaeazeazeazee           # 🔐 Token du tunnel Cloudflare
+TUNNEL_TOKEN=zaeazeazeazee # 🔐 Token du tunnel Cloudflare
+
+# --- Firecraw ----
+FIRECRAWL_API_KEY=efksdhjflsdjfldsf
