--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,20 @@
+version: "3.8"
+
 services:
   # ==============================================
   # Service: n8n-db
-  # PostgreSQL 16 Alpine for n8n
-  # Persists data via Docker volume
+  # PostgreSQL 16 Alpine pour n8n
   # ==============================================
   n8n-db:
     image: postgres:16-alpine
     container_name: n8n-db
     restart: always
     env_file:
-      - .env
+      - .env.n8n
     volumes:
       - n8n_db_data:/var/lib/postgresql/data
     healthcheck:
-      # ⚠️  string unique → variables $POSTGRES_USER et $POSTGRES_DB
-      #     sont évaluées par le shell
-      # ✅ On teste juste « le serveur répond‑il ? »
-      test: "pg_isready -q"
+      test: ["CMD", "pg_isready", "-h", "${DB_POSTGRESDB_HOST}", "-U", "${DB_POSTGRESDB_USER}", "-d", "${DB_POSTGRESDB_DATABASE}", "-q"]
       interval: 10s
       timeout: 5s
       start_period: 10s
@@ -24,8 +22,7 @@ services:
 
   # ==============================================
   # Service: n8n
-  # Principal d'exécution des workflows n8n
-  # Monte un volume pour la configuration et les données
+  # Exécution des workflows n8n
   # ==============================================
   n8n:
     image: n8nio/n8n:latest
@@ -35,27 +32,40 @@ services:
       n8n-db:
         condition: service_healthy
     env_file:
-      - .env
+      - .env.n8n
+    environment:
+      # on calcule le hostname et le webhook URL
+      - N8N_HOST=${N8N_SUBDOMAIN}.${DOMAIN}
+      - WEBHOOK_URL=${N8N_PROTOCOL}://${N8N_SUBDOMAIN}.${DOMAIN}
+      # on réutilise le reste des variables définies dans .env.n8n
+      - N8N_PORT
+      - N8N_PROTOCOL
+      - GENERIC_TIMEZONE
+      - DB_TYPE
+      - DB_POSTGRESDB_HOST
+      - DB_POSTGRESDB_DATABASE
+      - DB_POSTGRESDB_USER
+      - DB_POSTGRESDB_PASSWORD
     volumes:
       - n8n_data:/home/node/.n8n
 
   # ==============================================
   # Service: cloudflared
-  # Tunnel Cloudflare pour exposer n8n en HTTPS
-  # Gère automatiquement le tunnel configuré
+  # Tunnel Cloudflare pour n8n & Guacamole
   # ==============================================
   cloudflared:
     image: cloudflare/cloudflared:latest
     container_name: cloudflared
     restart: unless-stopped
-    command: tunnel --no-autoupdate run
     env_file:
-      - .env
+      - .env.cloudflare
+    volumes:
+      - ./cloudflared:/etc/cloudflared
+    command: tunnel --no-autoupdate run --token ${TUNNEL_TOKEN}
 
   # ==============================================
   # Service: watchtower
-  # Mise à jour automatique des conteneurs Docker
-  # Vérifie et nettoie les images obsolètes toutes les 5 minutes
+  # Mise à jour auto. des conteneurs Docker
   # ==============================================
   watchtower:
     image: containrrr/watchtower:latest
@@ -65,6 +75,62 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     command: --cleanup --interval 300
 
+  # ==============================================
+  # Service: guac-db
+  # PostgreSQL 16 Alpine pour Guacamole
+  # ==============================================
+  guac-db:
+    image: postgres:16-alpine
+    container_name: guac-db
+    restart: always
+    env_file:
+      - .env.guacamole
+    volumes:
+      - guac_db_data:/var/lib/postgresql/data
+      - ./initdb.sql:/docker-entrypoint-initdb.d/initdb.sql:ro
+    healthcheck:
+      test: ["CMD", "pg_isready", "-h", "${POSTGRESQL_HOSTNAME}", "-U", "${POSTGRESQL_USER}", "-d", "${POSTGRESQL_DATABASE}", "-q"]
+      interval: 10s
+      timeout: 5s
+      start_period: 10s
+      retries: 10
+
+  # ==============================================
+  # Service: guacd
+  # Daemon pour les sessions RDP/VNC/…
+  # ==============================================
+  guacd:
+    image: guacamole/guacd:1.5.2
+    container_name: guacd
+    restart: always
+
+  # ==============================================
+  # Service: guacamole
+  # Interface web Apache Guacamole (port 8080)
+  # ==============================================
+  guacamole:
+    image: guacamole/guacamole:1.5.2
+    container_name: guacamole
+    restart: always
+    depends_on:
+      guacd:
+        condition: service_started
+      guac-db:
+        condition: service_healthy
+    ports:
+      - "8080:8080"
+    env_file:
+      - .env.guacamole
+    environment:
+      # (optionnel) si vous voulez que l’appli sache son URL publique
+      - GUACAMOLE_HOST=${GUACAMOLE_SUBDOMAIN}.${DOMAIN}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/guacamole"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
 volumes:
   n8n_data:
   n8n_db_data:
+  guac_db_data:
